[tool.poetry]
name = "pyradox-generative"
version = "1.0.2"
description = "State of the Art Neural Networks for Generative Deep Learning"
authors = ["Ritvik Rastogi <rastogiritvik99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "2.6.2"
tensorflow-addons = "0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
